Fixes & cleanup